--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "dev": "node server/server.js",
     "start": "NODE_ENV=production node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "analyze": "cross-env ANALYZE=1 next build",
     "precommit": "lint-staged"
   },
@@ -47,7 +47,10 @@
     "webpack-bundle-analyzer": "^2.9.0"
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
     "husky": "^0.14.3",
+    "jest": "^24.8.0",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.4"
   },
